# Projet-IAR

./: .gitignore  README.md  pyproject.toml  requirements.txt  rl_algos.py  test.py
.github/workflows/: pytest.yml
ANALYSE/: sac-0-Hopper-v4.data  sac-1-Hopper-v4.data  sac-12-Hopper-v4.data  sac-13-Hopper-v4.data  sac-14-Hopper-v4.data  sac-2-Hopper-v4.data  sac-3-Hopper-v4.data  sac-4-Hopper-v4.data  sac-5-Hopper-v4.data  sac-6-Hopper-v4.data  sac-7-Hopper-v4.data  sac-8-Hopper-v4.data
logs/DroQ_Walker2d-v4_6620nuy2.data/: events.out.tfevents.1705946497.ppti-14-509-06.224497.0  progress.csv
logs/DroQ_Walker2d-v4_b56uip2g.data/: events.out.tfevents.1706108752.ppti-14-509-09.31397.0  progress.csv
logs/DroQ_Walker2d-v4_czf7fv56.data/: events.out.tfevents.1705940055.ppti-14-509-07.76370.0  progress.csv
logs/DroQ_Walker2d-v4_eendtuhg.data/: events.out.tfevents.1705946574.ppti-14-509-11.26350.0  progress.csv
logs/DroQ_Walker2d-v4_in04x50m.data/: events.out.tfevents.1705946558.ppti-14-509-10.123202.0  progress.csv
logs/DroQ_Walker2d-v4_jxrq57ns.data/: events.out.tfevents.1706032614.ppti-14-509-05.181136.0  progress.csv
logs/DroQ_Walker2d-v4_vu2doknq.data/: events.out.tfevents.1705940061.ppti-14-509-06.213615.0  progress.csv
logs/DroQ_Walker2d-v4_yi2u4bls.data/: events.out.tfevents.1706108879.ppti-14-509-10.184851.0  progress.csv
logs/DroQ_Walker2d-v4_zni105ad.data/: events.out.tfevents.1705946495.ppti-14-509-07.86709.0  progress.csv
logs/DroQ_Walker2d-v4_zps8kfko.data/: events.out.tfevents.1705943018.ppti-14-509-09.97118.0  progress.csv
logs/REDQ_Walker2d-v4_068u69fn.data/: progress.csv  (+1 more)
src/: Methodologically solid performance comparisons.ipynb  Untitled-1.ipynb
(+294 files in other folders)
